--- a/Readiculous.WebApp/Views/Book/Edit.cshtml
+++ b/Readiculous.WebApp/Views/Book/Edit.cshtml
@@ -54,8 +54,26 @@
     </div>
 
     <div class="mb-3">
-        <label asp-for="SelectedGenres" class="form-label">Genres</label>
-        <select asp-for="SelectedGenres" class="form-control" asp-items="@(new MultiSelectList(Model.AllAvailableGenres, "GenreId", "Name", Model.SelectedGenres))" multiple="multiple"></select>
+        <label class="form-label fw-bold">Genres</label>
+        @if (Model.AllAvailableGenres != null && Model.AllAvailableGenres.Any())
+        {
+            foreach (var genre in Model.AllAvailableGenres)
+            {
+                <div class="form-check">
+                    <input class="form-check-input"
+                           type="checkbox"
+                           name="SelectedGenres"
+                           value="@genre.GenreId"
+                           @(Model.SelectedGenres != null && Model.SelectedGenres.Contains(genre.GenreId) ? "checked" : "") />
+                    <label class="form-check-label">@genre.Name</label>
+                </div>
+            }
+        }
+        else
+        {
+            <p class="text-danger">No genres available.</p>
+        }
+
         <span asp-validation-for="SelectedGenres" class="text-danger"></span>
     </div>
 
